<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill"></string>
    <string name="widget_title">Today\'s Market</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="message_network_not_available">Oops! No active internet connection present</string>
    <string name="message_out_of_sync">Yikes! Check network connection, data might be outdated!</string>
    <string name="message_empty_list">What are you waiting for? Add some stock symbols!</string>
    <string name="a11y_add_stock_content_description">Add Stock</string>
    <string name="a11y_symbol"><xliff:g id="name">%1$s</xliff:g>(<xliff:g id="symbol">%2$s</xliff:g>)</string>
    <string name="a11y_symbol_price">Price: <xliff:g id="bid_price">%1$s</xliff:g></string>
    <string name="a11y_symbol_change_up">up</string>
    <string name="a11y_symbol_change_down">down</string>
    <string name="a11y_symbol_change">%1$s by <xliff:g id="change">%2$s</xliff:g></string>
    <string name="radio_button_7day_label">7d</string>
    <string name="a11y_radio_button_7day">7 days</string>
    <string name="radio_button_30day_label">30d</string>
    <string name="a11y_radio_button_30day">30 days</string>
    <string name="radio_button_1year_label">1y</string>
    <string name="a11y_radio_button_1year">1 year</string>
    <string name="radio_button_6month_label">6m</string>
    <string name="a11y_radio_button_6month">6 months</string>
    <string name="toast_symbol_not_found">Sorry mate, couldn\'t find the symbol you are looking for. \nPlease check and try again</string>
    <string name="toast_network_failure">Oops! There was a problem sending request.\nPlease check your network connection</string>
    <string name="widget_empty_list">No stocks available. Please add some stocks.</string>
    <string name="line_graph_chart_no_data">Fetching information</string>
</resources>
