<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.mikephil.charting.charts.LineChart
        xmlns:chart="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="#fff"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_7day"
            android:text="@string/radio_button_7day_label"
            android:contentDescription="@string/a11y_radio_button_7day"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_30day"
            android:text="@string/radio_button_30day_label"
            android:contentDescription="@string/a11y_radio_button_30day"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_6month"
            android:text="@string/radio_button_6month_label"
            android:contentDescription="@string/a11y_radio_button_6month"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_1year"
            android:text="@string/radio_button_1year_label"
            android:contentDescription="@string/a11y_radio_button_1year"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

</LinearLayout>
